# kamaz

./: pyproject.toml  task1.py  task2.py  task3.py  Задание.docx
task3_results/: 69-41-1-novie-prostory.xlsx  kvartiry-dom-20-10-Drugnyi.xlsx  novye-kvartiry-vivaldi-3.xlsx  prodazha-kvartir-20-12-druzhnyi.xlsx  prodazha-kvartir-v-sidorovke-zhk-vysota-45.xlsx  zhd-2016-mkrn-druzhnyy.xlsx  zhiloj-kompleks-novye-prostory-69-41-2.xlsx  zhiloj-kompleks-novye-prostory-69-41-3.xlsx
