[tool.poetry]
name = "kamaz"
version = "0.1.0"
description = ""
authors = ["Sereja <sermatrena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.21.0"
openpyxl = "^3.1.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
